--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 </head>
 
 <body>
-    <h1>Courses</h1>
+    <h1>About Me</h1>
+    <div>
+        <p>My name is Tommy Nguyen and I am 18 years old.</p>
+        <p>I've always had a <em>great</em> interest in video games and music.</p>
+        <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
+    </div>
+    <h2>Courses</h2>
     <div>
         <ul>
-            <li><a href="https://www.bcit.ca/outlines/20223048467/">Fundamental Web Technologies</a></li>
-            <li><a href="https://www.bcit.ca/outlines/20223048461/">Scripting for IT</a></li>
-            <li><a href="https://www.bcit.ca/outlines/20223048468/">Database Systems</a></li>
+            <li><a href="https://www.bcit.ca/outlines/20223048467/" target= " _blank " title="ACIT 1620">Fundamental Web Technologies</a></li>
+            <li><a href="https://www.bcit.ca/outlines/20223048461/" target= " _blank " title="ACIT 1515">Scripting for IT</a></li>
+            <li><a href="https://www.bcit.ca/outlines/20223048468/" target= " _blank " title="ACIT 1630">Database Systems</a></li>
         </ul>
     </div>
 </body>
