--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
 </head>
 
 <body>
-    <h1>About Me</h1>
+    <header>
+        <h1>About Me</h1>
+    </header>
+    <main>
+        <p>My name is Tommy Nguyen and I am 18 years old.</p>
+        <p>I've always had a <em>great</em> interest in video games and music.</p>
+        <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
 
-    <p>My name is Tommy Nguyen and I am 18 years old.</p>
-    <p>I've always had a <em>great</em> interest in video games and music.</p>
-    <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
+        <h2>Courses</h2>
 
-    <h2>Courses</h2>
-
-    <ul>
-        <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">Fundamental Web
-                Technologies</a></li>
-        <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">Scripting for IT</a>
-        </li>
-        <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">Database Systems</a>
-        </li>
-    </ul>
-
+        <ul>
+            <nav>
+                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">Fundamental
+                        Web
+                        Technologies</a></li>
+                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">Scripting
+                        for
+                        IT</a>
+                </li>
+                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">Database
+                        Systems</a>
+                </li>
+            </nav>
+        </ul>
+    </main>
 </body>
 
 </html>
