Update semantic with more section tags

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <h1>About Me</h1>
     </header>
     <main>
-        <p>My name is Tommy Nguyen and I am 18 years old.</p>
-        <p>I've always had a <em>great</em> interest in video games and music.</p>
-        <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
-
+        <section>
+            <p>My name is Tommy Nguyen and I am 18 years old.</p>
+            <p>I've always had a <em>great</em> interest in video games and music.</p>
+            <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
+        </section>
         <h2>Courses</h2>
 
         <ul>
