Added BCIT Logo with alt text and width height next to courses

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>I've always had a <em>great</em> interest in video games and music.</p>
             <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
         </section>
-        <h2>Courses</h2>
+        <h2>Courses  <img src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></h2> 
 
         <ul>
             <nav>
