--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <p>I've always had a <em>great</em> interest in video games and music.</p>
             <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
         </section>
-        <h2>Courses  <img src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></h2> 
+        <h2>Courses <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
+                    src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></a></h2>
 
         <ul>
             <nav>
