Added Image of me and put correct dimensions + alt text

--- a/index.html
+++ b/index.html
@@ -12,27 +12,32 @@
     </header>
     <main>
         <section>
+            <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367">
             <p>My name is Tommy Nguyen and I am 18 years old.</p>
             <p>I've always had a <em>great</em> interest in video games and music.</p>
             <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
         </section>
-        <h2>Courses <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
-                    src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></a></h2>
+        <section>
+            <h2>Courses <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
+                        src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></a></h2>
 
-        <ul>
-            <nav>
-                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">Fundamental
-                        Web
-                        Technologies</a></li>
-                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">Scripting
-                        for
-                        IT</a>
-                </li>
-                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">Database
-                        Systems</a>
-                </li>
-            </nav>
-        </ul>
+            <ul>
+                <nav>
+                    <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank "
+                            title="ACIT 1620">Fundamental
+                            Web
+                            Technologies</a></li>
+                    <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank "
+                            title="ACIT 1515">Scripting
+                            for
+                            IT</a>
+                    </li>
+                    <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">Database
+                            Systems</a>
+                    </li>
+                </nav>
+            </ul>
+        </section>
     </main>
 </body>
 
