--- a/index.html
+++ b/index.html
@@ -3,33 +3,23 @@
 
 <head>
     <title>My Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital@1&display=swap" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1 class="headheader">About Me</h1>
     </header>
     <main>
         <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367">
         <p>My name is Tommy Nguyen and I am 18 years old.</p>
         <p>I've always had a <em>great</em> interest in video games and music.</p>
         <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
-        <h2>Courses <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
-                    src="./images/bcit_logo.png" alt="BCIT Logo" width="40" height="35"></a></h2>
+        <h2 class="headnav">Navigation Menu</h2>
         <nav>
-            <ul>
-                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">Fundamental
-                        Web
-                        Technologies</a></li>
-                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">Scripting
-                        for
-                        IT</a>
-                </li>
-                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">Database
-                        Systems</a>
-                </li>
-            </ul>
+            <a href="misc/courses.html" class="headgo">Go to Courses</a>
         </nav>
     </main>
 </body>
