Finished Navigation to school and courses

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <h2 class="headnav">Navigation Menu</h2>
         <nav>
             <a href="misc/courses.html" class="headgo">Go to Courses</a>
+            <br>
+            <a href="misc/school.html" class="headgo"> Go to School</a>
         </nav>
     </main>
 </body>
