Centered everything on the index.html page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1 class="headheader">About Me</h1>
     </header>
     <main>
-        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367">
-        <p>My name is Tommy Nguyen and I am 18 years old.</p>
-        <p>I've always had a <em>great</em> interest in video games and music.</p>
-        <p>My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
+        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
+        <p class="pcenter">My name is Tommy Nguyen and I am 18 years old.</p>
+        <p class="pcenter">I've always had a <em>great</em> interest in video games and music.</p>
+        <p class="pcenter">My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
         <h2 class="headnav">Navigation Menu</h2>
-        <nav>
+        <nav class="navigation">
             <a href="misc/courses.html" class="headgo">Go to Courses</a>
             <br>
             <a href="misc/school.html" class="headgo"> Go to School</a>
