Applied navigation elements to school.html and centered it.

--- a/misc/school.html
+++ b/misc/school.html
@@ -13,9 +13,10 @@
         <h1 class="headheader">British Columbia Institue of Technology</h1>
     </header>
     <main>
-        <nav>
+        <nav class="navigation">
             <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
-                    src="../images/bcit_logo.png" alt="BCIT Logo" width="500" height="450"></a></h2>
+                    src="../images/bcit_logo.png" alt="BCIT Logo" width="500" height="450" class="myimage"></a>
+                    <a href="../index.html" class="headgo">Go Back</a>
         </nav>
     </main>
 </body>
