Removed h1 tag from school html

--- a/misc/school.html
+++ b/misc/school.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="headheader">British Columbia Institue of Technology</h1>
+        <h1 class="schoolhead">British Columbia Institue of Technology</h1>
     </header>
     <main>
         <nav class="navigation">
