Added class with flexbox for header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 class="headheader">About Me</h1>
     </header>
-    <main>
+    <!-- <main>
         <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
         <p class="pcenter">My name is Tommy Nguyen and I am 18 years old.</p>
         <p class="pcenter">I've always had a <em>great</em> interest in video games and music.</p>
@@ -23,7 +23,7 @@
             <br>
             <a href="misc/school.html" class="headgo"> Go to School</a>
         </nav>
-    </main>
+    </main> -->
 </body>
 
 </html>
