Added header to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <header>
-        <h1 class="headheader">About Me</h1>
+        <h1 class="headheader">Welcome to my website</h1>
+        <ul class="list-nav">
+            <li><a href="misc/courses.html">Courses</a></li>
+            <li><a href="misc/school.html">School</a></li>
+        </ul>>
     </header>
     <!-- <main>
         <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
@@ -18,11 +22,6 @@
         <p class="pcenter">I've always had a <em>great</em> interest in video games and music.</p>
         <p class="pcenter">My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
         <h2 class="headnav">Navigation Menu</h2>
-        <nav class="navigation">
-            <a href="misc/courses.html" class="headgo">Go to Courses</a>
-            <br>
-            <a href="misc/school.html" class="headgo"> Go to School</a>
-        </nav>
     </main> -->
 </body>
 
