Added footer with copyright to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <li><a href="misc/school.html">School</a></li>
         </ul>>
     </header>
+    <main>
+
+    </main>
+    <footer class="foot">
+        <p>Copyright</p>
+    </footer>
     <!-- <main>
         <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
         <p class="pcenter">My name is Tommy Nguyen and I am 18 years old.</p>
