Started writing paragraphs for main

--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
         </ul>>
     </header>
     <main>
-
+        <h2>ABOUT ME</h2>
+        <p>My name is Tommy Nguyen and I am 18 years old. I've always had a great interest in video games and music</p>
+        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
+        <p>My hear isn't that great as I can only hear from one side. I want to have a successful job which is why I am taking this course</p>
     </main>
     <footer class="foot">
         <p>Copyright</p>
     </footer>
-    <!-- <main>
-        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
-        <p class="pcenter">My name is Tommy Nguyen and I am 18 years old.</p>
-        <p class="pcenter">I've always had a <em>great</em> interest in video games and music.</p>
-        <p class="pcenter">My hearing isn't that great, as I can only hear from <strong>one side</strong>.</p>
-        <h2 class="headnav">Navigation Menu</h2>
-    </main> -->
 </body>
 
 </html>
