Added header and footer to courses.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>My hear isn't that great as I can only hear from one side. I want to have a successful job which is why I am taking this course</p>
     </main>
     <footer class="foot">
-        <p>Copyright</p>
+        <p>Copyright data</p>
     </footer>
 </body>
 
