--- a/misc/courses.html
+++ b/misc/courses.html
@@ -10,25 +10,38 @@
 
 <body>
     <header>
-        <h1 class="coursehead">British Columbia Institue of Technology</h1>
+        <h1 class="headheader">Welcome to my website</h1>
+        <ul class="list-nav">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./school.html">School</a></li>
+        </ul>>
     </header>
     <main>
+        <h1 class="coursehead">British Columbia Institue of Technology</h1>
         <nav>
             <ul>
-                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620"><p class="headgo">Fundamental
-                        Web
-                        Technologies</p></a></li>
-                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515"><p class="headgo">Scripting
-                        for
-                        IT</p></a>
+                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
+                        <p class="headgo">Fundamental
+                            Web
+                            Technologies</p>
+                    </a></li>
+                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
+                        <p class="headgo">Scripting
+                            for
+                            IT</p>
+                    </a>
                 </li>
-                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630"><p class="headgo">Database
-                        Systems</p></a>
+                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
+                        <p class="headgo">Database
+                            Systems</p>
+                    </a>
                 </li>
             </ul>
-            <a href="../index.html" class="headgo">Go Back</a>
         </nav>
     </main>
+    <footer class="foot">
+        <p>Copyright data</p>
+    </footer>
 </body>
 
 
