Added header and footer to school.html

--- a/misc/school.html
+++ b/misc/school.html
@@ -10,15 +10,22 @@
 
 <body>
     <header>
-        <h1 class="schoolhead">British Columbia Institue of Technology</h1>
+        <h1 class="headheader">Welcome to my website</h1>
+        <ul class="list-nav">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./courses.html">Courses</a></li>
+        </ul>>
     </header>
     <main>
+        <h1 class="schoolhead">British Columbia Institue of Technology</h1>
         <nav class="navigation">
             <a href="https://www.bcit.ca/" target=" _blank " title="Go to BCIT website"><img
-                    src="../images/bcit_logo.png" alt="BCIT Logo" width="500" height="450" class="myimage"></a>
-                    <a href="../index.html" class="headgo">Go Back</a>
+                    src="../images/bcit_logo.png" alt="BCIT Logo" width="300" height="250" class="myimage"></a>
         </nav>
     </main>
+    <footer class="foot">
+        <p>Copyright data</p>
+    </footer>
 </body>
 
 
