Fixed header and footer by changing margin

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <ul class="list-nav">
             <li><a href="misc/courses.html">Courses</a></li>
             <li><a href="misc/school.html">School</a></li>
-        </ul>>
+        </ul>
     </header>
     <main>
         <h2>ABOUT ME</h2>
-        <p>My name is Tommy Nguyen and I am 18 years old. I've always had a great interest in video games and music</p>
-        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
-        <p>My hear isn't that great as I can only hear from one side. I want to have a successful job which is why I am taking this course</p>
+        <p>Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1</p>
+        <!-- <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage"> -->
+        <p>Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1</p>
     </main>
     <footer class="foot">
         <p>Copyright data</p>
