About me text added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     <main>
         <h2>ABOUT ME</h2>
-        <p>Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1</p>
-        <!-- <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage"> -->
-        <p>Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1 Test Paragraph1</p>
+        <p>Hi, my name is Tommy Nguyen. I have always been interested in music and video games. I play the piano during my spare time as it is one of my hobbies.</p>
+        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
+        <p>Computers have also interested me which is one of the reasons why I am taking this course. My hearing isn't the best, since I can only hear from one side</p>
     </main>
     <footer class="foot">
         <p>Copyright data</p>
