--- a/index.html
+++ b/index.html
@@ -17,10 +17,23 @@
         </ul>
     </header>
     <main>
-        <h2>ABOUT ME</h2>
-        <p>Hi, my name is Tommy Nguyen. I have always been interested in music and video games. I play the piano during my spare time as it is one of my hobbies.</p>
-        <img src="./images/my_image.jpg" alt="Picture of me" width="490" height="367" class="myimage">
-        <p>Computers have also interested me which is one of the reasons why I am taking this course. My hearing isn't the best, since I can only hear from one side</p>
+        <div class="section">
+            <div class="paragraph">
+                <h2>ABOUT ME</h2>
+                <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <img src="./images/my_image.jpg" alt="Picture of me">
+            <p>Sit amet risus nullam eget felis eget. Mattis vulputate enim nulla aliquet porttitor lacus
+                luctus. Tempor id eu nisl nunc mi ipsum faucibus vitae. Pretium aenean pharetra magna ac. Nibh tellus
+                molestie nunc non blandit massa enim nec dui. Interdum velit laoreet id donec ultrices. Quis varius quam
+                quisque id diam vel. Interdum velit laoreet id donec ultrices tincidunt. Arcu dui vivamus arcu felis
+                bibendum. Duis at consectetur lorem donec massa sapien faucibus et molestie. Posuere ac ut consequat
+                semper viverra nam libero justo. Feugiat vivamus at augue eget arcu dictum varius duis.</p>
+        </div>
     </main>
     <footer class="foot">
         <p>Copyright data</p>
