--- a/misc/courses.html
+++ b/misc/courses.html
@@ -5,7 +5,7 @@
     <title>School</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital@1&display=swap" rel="stylesheet">
-    <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="../css/coursestyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
