--- a/misc/courses.html
+++ b/misc/courses.html
@@ -17,24 +17,31 @@
         </ul>
     </header>
     <main>
-        <h1 class="coursehead">British Columbia Institue of Technology</h1>
         <nav>
             <ul>
                 <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
                         <p class="headgo">Fundamental
                             Web
                             Technologies</p>
-                    </a></li>
+
+                    </a>
+                    <p>This course introduces the fundamentals of designing and developing an effective Website</p>
+                    <p>Fall 2022</p>
+                </li>
                 <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
                         <p class="headgo">Scripting
                             for
                             IT</p>
                     </a>
+                    <p>This course covers programming with python</p>
+                    <p>Fall 2022</p>
                 </li>
                 <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
                         <p class="headgo">Database
                             Systems</p>
                     </a>
+                    <p>This course covers relational and noSQL technologies</p>
+                    <p>Fall 2022</p>
                 </li>
             </ul>
         </nav>
