Added margin to space out the text

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="headheader">Welcome to my website</h1>
+        <h1 class="headheader">My Courses</h1>
         <ul class="list-nav">
             <li><a href="../index.html">Home</a></li>
             <li><a href="./school.html">School</a></li>
@@ -18,32 +18,41 @@
     </header>
     <main>
         <nav>
-            <ul>
-                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
-                        <p class="headgo">Fundamental
-                            Web
-                            Technologies</p>
+            <div>
+                <ul>
+                    <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
+                            <p>ACIT 1620 - Fundamental
+                                Web
+                                Technologies</p>
 
-                    </a>
-                    <p>This course introduces the fundamentals of designing and developing an effective Website</p>
-                    <p>Fall 2022</p>
-                </li>
-                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
-                        <p class="headgo">Scripting
-                            for
-                            IT</p>
-                    </a>
-                    <p>This course covers programming with python</p>
-                    <p>Fall 2022</p>
-                </li>
-                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
-                        <p class="headgo">Database
-                            Systems</p>
-                    </a>
-                    <p>This course covers relational and noSQL technologies</p>
-                    <p>Fall 2022</p>
-                </li>
-            </ul>
+                        </a>
+                        <p class="gap">This course introduces the fundamental principles, concepts, and techniques for
+                            understanding and developing modern web sites.</p>
+                        <p>Fall 2022</p>
+                        <hr color="black">
+                    </li>
+                    <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
+                            <p>ACIT 1515 - Scripting
+                                for
+                                IT</p>
+                        </a>
+                        <p class="gap">The course introduces the fundamental concepts of programming for IT
+                            professionals, with a focus on scripting languages that are commonly found in the workplace.
+                        </p>
+                        <p>Fall 2022</p>
+                    </li>
+                    <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
+                            <p>ACIT 1630 - Database
+                                Systems</p>
+                        </a>
+                        <p class="gap">This course covers relational and NoSQL database technologies, including basic
+                            concepts, relational algebra, enhanced entity-relationship and NoSQL data modeling,
+                            functional dependencies and normalization, design methodology, SQL query language (DDL and
+                            DML), views, security and transaction management.</p>
+                        <p>Fall 2022</p>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </main>
     <footer class="foot">
