--- a/misc/courses.html
+++ b/misc/courses.html
@@ -29,7 +29,7 @@
                         <p class="gap">This course introduces the fundamental principles, concepts, and techniques for
                             understanding and developing modern web sites.</p>
                         <p>Fall 2022</p>
-                        <hr color="black">
+                        <hr color="black" size="2">
                     </li>
                     <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
                             <p>ACIT 1515 - Scripting
@@ -40,6 +40,7 @@
                             professionals, with a focus on scripting languages that are commonly found in the workplace.
                         </p>
                         <p>Fall 2022</p>
+                        <hr color="black" size="3">
                     </li>
                     <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
                             <p>ACIT 1630 - Database
