--- a/misc/courses.html
+++ b/misc/courses.html
@@ -5,56 +5,56 @@
     <title>School</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital@1&display=swap" rel="stylesheet">
-    <link href="../css/coursestyle.css" rel="stylesheet" type="text/css">
+    <link href="../css/coursestyle.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
         <h1 class="headheader">My Courses</h1>
-        <ul class="list-nav">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./school.html">School</a></li>
-        </ul>
+        <div class="headcontainer">
+            <ul class="list-nav">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./school.html">School</a></li>
+            </ul>
+        </div>
     </header>
     <main>
-        <nav>
-            <div>
-                <div class="container">
-                <ul>
-                    <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
-                            <p>ACIT 1620 - Fundamental
-                                Web
-                                Technologies</p>
+        <nav class="mainnav">
+            <ul>
+                <li><a href="https://www.bcit.ca/outlines/20223048467/" target=" _blank " title="ACIT 1620">
+                        <p>ACIT 1620 - Fundamental
+                            Web
+                            Technologies</p>
 
-                        </a>
-                        <p class="gap">This course introduces the fundamental principles, concepts, and techniques for
-                            understanding and developing modern web sites.</p>
-                        <p>Fall 2022</p>
-                        <hr>
-                    </li>
-                    <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
-                            <p>ACIT 1515 - Scripting
-                                for
-                                IT</p>
-                        </a>
-                        <p class="gap">The course introduces the fundamental concepts of programming for IT
-                            professionals, with a focus on scripting languages that are commonly found in the workplace.
-                        </p>
-                        <p>Fall 2022</p>
-                        <hr>
-                    </li>
-                    <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
-                            <p>ACIT 1630 - Database
-                                Systems</p>
-                        </a>
-                        <p class="gap">This course covers relational and NoSQL database technologies, including basic
-                            concepts, relational algebra, enhanced entity-relationship and NoSQL data modeling,
-                            functional dependencies and normalization, design methodology, SQL query language (DDL and
-                            DML), views, security and transaction management.</p>
-                        <p>Fall 2022</p>
-                    </li>
-                </ul>
-            </div>
+                    </a>
+                    <p>Fall 2022</p>
+                    <p class="gap">This course introduces the fundamental principles, concepts, and techniques for
+                        understanding and developing modern web sites.</p>
+                    <hr>
+                </li>
+                <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
+                        <p>ACIT 1515 - Scripting
+                            for
+                            IT</p>
+                    </a>
+                    <p>Fall 2022</p>
+                    <p class="gap">The course introduces the fundamental concepts of programming for IT
+                        professionals, with a focus on scripting languages that are commonly found in the workplace.
+                    </p>
+                    <hr>
+                </li>
+                <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
+                        <p>ACIT 1630 - Database
+                            Systems</p>
+                    </a>
+                    <p>Fall 2022</p>
+                    <p class="gap">This course covers relational and NoSQL database technologies, including basic
+                        concepts, relational algebra, enhanced entity-relationship and NoSQL data modeling,
+                        functional dependencies and normalization, design methodology, SQL query language (DDL and
+                        DML), views, security and transaction management.</p>
+                </li>
+            </ul>
         </nav>
     </main>
     <footer class="foot">
