--- a/misc/courses.html
+++ b/misc/courses.html
@@ -28,9 +28,11 @@
                             Technologies</p>
 
                     </a>
-                    <p>Fall 2022</p>
+                    <div class="paracontainer">
+                    <p class="two">Fall 2022</p>
                     <p class="gap">This course introduces the fundamental principles, concepts, and techniques for
                         understanding and developing modern web sites.</p>
+                    </div>
                     <hr>
                 </li>
                 <li><a href="https://www.bcit.ca/outlines/20223048461/" target=" _blank " title="ACIT 1515">
@@ -38,21 +40,25 @@
                             for
                             IT</p>
                     </a>
-                    <p>Fall 2022</p>
+                    <div class="paracontainer">
+                    <p class="two">Fall 2022</p>
                     <p class="gap">The course introduces the fundamental concepts of programming for IT
                         professionals, with a focus on scripting languages that are commonly found in the workplace.
                     </p>
+                </div>
                     <hr>
                 </li>
                 <li><a href="https://www.bcit.ca/outlines/20223048468/" target=" _blank " title="ACIT 1630">
                         <p>ACIT 1630 - Database
                             Systems</p>
                     </a>
-                    <p>Fall 2022</p>
+                    <div class="paracontainer">
+                    <p class="two">Fall 2022</p>
                     <p class="gap">This course covers relational and NoSQL database technologies, including basic
                         concepts, relational algebra, enhanced entity-relationship and NoSQL data modeling,
                         functional dependencies and normalization, design methodology, SQL query language (DDL and
                         DML), views, security and transaction management.</p>
+                    </div>
                 </li>
             </ul>
         </nav>
