--- a/misc/courses.html
+++ b/misc/courses.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital@1&display=swap" rel="stylesheet">
     <link href="../css/coursestyle.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="../script/script.js"> </script>
 </head>
 
 <body>
